--- a/DeepTrace/Controls/Dialog.razor
+++ b/DeepTrace/Controls/Dialog.razor
@@ -3,18 +3,32 @@
         @Text
     </DialogContent>
     <DialogActions>
-        @if (AllowCancel)
+        @if( IsYesNoCancel )
         {
+            <MudButton Color="MudBlazor.Color.Primary" OnClick="Yes">Yes</MudButton>
+            <MudButton OnClick="No">No</MudButton>
             <MudButton OnClick="Cancel">Cancel</MudButton>
         }
-        <MudButton Color="MudBlazor.Color.Primary" OnClick="Submit">Ok</MudButton>
+        else 
+        {
+            if (AllowCancel)
+            {
+                <MudButton OnClick="Cancel">Cancel</MudButton>
+            }
+            <MudButton Color="MudBlazor.Color.Primary" OnClick="Submit">Ok</MudButton>
+        }
     </DialogActions>
 </MudDialog>
 @code {
     [CascadingParameter] MudDialogInstance? MudDialog { get; set; }
-    [Parameter] public bool AllowCancel { get; set; }
-    [Parameter] public string Text { get; set; } = "";
+    [Parameter] public bool AllowCancel               { get; set; }
+    [Parameter] public string Text                    { get; set; } = "";
+    [Parameter] public bool IsYesNoCancel             { get; set; } = false;
 
     void Submit() => MudDialog?.Close(DialogResult.Ok(true));
+    
     void Cancel() => MudDialog?.Cancel();
+    
+    void Yes()    => MudDialog?.Close(DialogResult.Ok(true));
+    void No()     => MudDialog?.Close(DialogResult.Ok(false));
 }
