--- a/DeepTrace/Pages/Training.razor
+++ b/DeepTrace/Pages/Training.razor
@@ -553,6 +553,7 @@
         var trainedModel = new TrainedModelDefinition
         {
             Id = _modelForm!.CurrentModel.Id,
+            IsEnabled = false,
             Name = _modelForm!.CurrentModel.Name,
             Value = bytes
         };
