DEEP-41 Evaluate page added

--- a/DeepTrace/Shared/NavMenu.razor
+++ b/DeepTrace/Shared/NavMenu.razor
@@ -1,7 +1,9 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
     <MudNavLink Href="/datasources" Match="NavLinkMatch.Prefix">Data sources</MudNavLink>
-    <MudNavLink Href="/training"  Match="NavLinkMatch.Prefix">Training</MudNavLink>
+    <MudNavLink Href="/training" Match="NavLinkMatch.Prefix">Training</MudNavLink>
+    <MudSpacer />
+    <MudNavLink Href="/evaluate" Match="NavLinkMatch.Prefix">Evaluate</MudNavLink>
 
     <MudSpacer/>
     <MudNavLink Href="/about" Match="NavLinkMatch.Prefix">About</MudNavLink>
